--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node.app.ts",
+    "start": "node app.ts",
     "dev": "nodemon app.ts"
   },
   "keywords": [],
